--- a/project0/styles.css
+++ b/project0/styles.css
@@ -1,3 +1,4 @@
+/* for whole document */
 body, html {
     height: 100%;
     margin: 0;
@@ -7,16 +8,16 @@ body, html {
     box-sizing: border-box;
 }
 
+button {
+    cursor: pointer;
+}
+
+
+/* for main page and image search */
 .page {
     font-family: Arial, Helvetica, sans-serif;
     height: 100%;
-    min-width: 550px;
-}
-
-.adv-page {
-    font-family: Arial, Helvetica, sans-serif;
-    height: 100%;
-    min-width: 750px;
+    min-width: 320px;
 }
 
 .header {
@@ -53,7 +54,7 @@ body, html {
 }
 
 .logo {
-    width: 356px;
+    max-width: 356px;
     height: 100%;
     position: relative;
     margin-left: auto;
@@ -63,7 +64,7 @@ body, html {
 .image {
     position: absolute;
     bottom: 0px;
-    height: 96px;
+    max-height: 96px;
 }
 
 .images-writing {
@@ -75,54 +76,54 @@ body, html {
     font-size: 16px;
 }
 
-.search-bar {
-    text-align: center;
-}
-
 .search-q {
     padding-top: 20px;
     padding-bottom: 10px;
 }
 
+.border {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 500px;
+    height: 44px;
+    border: 1px solid #ddd;
+    border-radius: 21px;
+    background-image: url('static/searchicon.png');
+    background-position: 10px 10px; 
+    background-repeat: no-repeat;
+    padding: 7px 13px 7px 40px;
+    display: flex;
+}
+
+.highlight {
+    box-shadow: 0 1px 6px rgba(32,33,36,.28);
+}
+
+.border:hover {
+    box-shadow: 0 1px 6px rgba(32,33,36,.28);
+}
+
+.border button {
+    border: none;
+    padding: 0;
+    background-color: #fff;
+}
+
+.border input[type=text] {
+    width: 100%;
+    border: none;
+    margin: 0 10px 0 0;
+    font-size: 16px;
+}
+
+.border input[type=text] {
+    outline: none;
+}
+
 .search-buttons {
+    text-align: center;
     padding-top: 10px;
     padding-bottom: 10px;
-}
-
-.search-bar input[type=text] {
-    width: 500px;
-    border: 1px solid #ddd;
-    border-radius: 21px;
-    font-size: 16px;
-    background-image: url('static/searchicon.png');
-    background-position: 10px 10px; 
-    background-repeat: no-repeat;
-    padding: 12px 20px 12px 40px;
-}
-
-.search-bar input[type=text]:hover {
-    width: 500px;
-    border: 1px solid #ddd;
-    border-radius: 21px;
-    font-size: 16px;
-    background-image: url('static/searchicon.png');
-    background-position: 10px 10px; 
-    background-repeat: no-repeat;
-    padding: 12px 20px 12px 40px;
-    box-shadow: 0 1px 6px rgba(32,33,36,.28);
-}
-
-.search-bar input[type=text]:focus {
-    width: 500px;
-    outline: none;
-    border: 1px solid #ddd;
-    border-radius: 21px;
-    font-size: 16px;
-    background-image: url('static/searchicon.png');
-    background-position: 10px 10px; 
-    background-repeat: no-repeat;
-    padding: 12px 20px 12px 40px;
-    box-shadow: 0 1px 6px rgba(32,33,36,.28);
 }
 
 .search-bar input[type=submit] {
@@ -136,35 +137,18 @@ body, html {
     line-height: 27px;
     height: 36px;
     width: 150px;
+    cursor: pointer;
 }
 
 .search-bar input[type=submit]:hover {
-    background-color: #f8f9fa;
     border: 1px solid #ddd;
-    border-radius: 4px;
-    color: #3c4043;
-    font-size: 14px;
-    margin: 11px 4px;
-    padding: 0 16px;
-    line-height: 27px;
-    height: 36px;
-    width: 150px;
     box-shadow: 0 1px 1px rgba(32,33,36,.28);
 }
 
 .search-bar input[type=submit]:active {
-    background-color: #f8f9fa;
     border: 1px solid #4285F4;
-    border-radius: 4px;
-    color: #3c4043;
-    font-size: 14px;
-    margin: 11px 4px;
-    padding: 0 16px;
-    line-height: 27px;
-    height: 36px;
-    width: 150px;
-    box-shadow: 0 1px 1px rgba(32,33,36,.28);
 }
+
 
 .footer {
     position: fixed;
@@ -189,6 +173,15 @@ body, html {
 
 .footer-item a:hover {
     text-decoration-line: underline;
+}
+
+
+
+/* for advanced search page */
+.adv-page {
+    font-family: Arial, Helvetica, sans-serif;
+    height: 100%;
+    min-width: 750px;
 }
 
 .advheader {
@@ -236,12 +229,6 @@ body, html {
 }
 
 .text input:focus {
-    width: 100%;
-    border: 1px solid #ccc;
-    border-top: 1px solid #aaa;
-    border-radius: 1px;
-    height: 29px;
-    padding: 1px 8px;
     outline: 1px solid #3079ed;
 }
 
@@ -315,21 +302,9 @@ body, html {
 .button input:hover {
     background-color: #4788f1;
     border: 1px solid black;
-    color: #fff;
-    border-radius: 2px;
-    height: 30px;
-    padding: 0 12px;
-    font-size: 12px;
-    font-weight: bold;
 }
 
 .button input:active {
     background-color: #407de0;
     border: 1px solid black;
-    color: #fff;
-    border-radius: 2px;
-    height: 30px;
-    padding: 0 12px;
-    font-size: 12px;
-    font-weight: bold;
 }
