--- a/project1/wiki/encyclopedia/static/encyclopedia/styles.css
+++ b/project1/wiki/encyclopedia/static/encyclopedia/styles.css
@@ -13,7 +13,7 @@ h1 {
 }
 
 textarea {
-    height: 90vh;
+    height: 80vh;
     width: 80%;
 }
 
@@ -35,4 +35,9 @@ textarea {
 
 .sidebar h2 {
     margin-top: 5px;
+}
+
+.edit-form input[type=text] {
+    width: 80%;
+    margin-bottom: 5px;
 }
